--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^4.2.0",
     "gatsby-plugin-sharp": "^3.2.0",
+    "gatsby-remark-images": "^4.2.0",
+    "gatsby-remark-images-grid": "^1.1.2",
     "gatsby-source-filesystem": "^3.2.0",
     "gatsby-transformer-remark": "^3.2.0",
     "gatsby-transformer-sharp": "^3.2.0",
