--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   },
   "dependencies": {
     "gatsby": "^3.1.2",
-    "gatsby-plugin-image": "^1.2.0",
+    "gatsby-plugin-image": "^1.2.1",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^4.2.0",
-    "gatsby-plugin-sharp": "^3.2.0",
+    "gatsby-plugin-sharp": "^3.2.1",
     "gatsby-remark-images": "^4.2.0",
     "gatsby-remark-images-grid": "^1.1.2",
     "gatsby-source-filesystem": "^3.2.0",
@@ -26,7 +26,9 @@
     "gatsby-transformer-sharp": "^3.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "sass": "^1.32.8"
+    "react-slick": "^0.28.1",
+    "sass": "^1.32.8",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "prettier": "2.2.1"
