--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "gatsby": "^3.1.2",
     "gatsby-plugin-image": "^1.2.1",
+    "gatsby-plugin-react-helmet": "^4.3.0",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^4.2.0",
     "gatsby-plugin-sharp": "^3.2.1",
@@ -27,6 +28,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-slick": "^0.28.1",
     "sass": "^1.32.8",
     "slick-carousel": "^1.8.1"
